fix text overlapping

--- a/components/TransactionGridSection/TransactionCard/TransactionCard.module.scss
+++ b/components/TransactionGridSection/TransactionCard/TransactionCard.module.scss
@@ -93,7 +93,7 @@
   margin: 0;
   line-height: 1;
   color: $black;
-  max-width: 37%;
+  max-width: 45%;
 }
 
 .transactionLogo {
